// Forked from https://github.com/akka/akka-grpc-quickstart-java.g8/blob/master
// /src/main/g8/src/main/proto/helloworld.proto
syntax = "proto3";

option java_multiple_files = true;
option java_package = "testing.grpcweb";
option java_outer_classname = "HelloWorldProto";

service TestService {
    rpc SayHello (HelloRequest) returns (HelloReply) {}
    rpc SayHelloToAll (stream HelloRequest) returns (stream HelloReply) {}
}

message HelloRequest {
    string name = 1;
}

message HelloReply {
    string message = 1;
}
